--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.72.6",
     "react-native-animatable": "^1.4.0",
     "react-native-awesome-loading": "^1.0.15",
+    "react-native-calendars": "^1.1302.0",
     "react-native-date-picker": "^4.2.1",
     "react-native-dialog": "^9.3.0",
     "react-native-dropdownalert": "^5.1.0",
