--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.2.2",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.0",
+    "date-fns": "^2.30.0",
     "moment-timezone": "^0.5.43",
     "react": "18.2.0",
     "react-native": "0.72.6",
