--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-date-picker": "^4.2.1",
     "react-native-dialog": "^9.3.0",
     "react-native-dropdownalert": "^5.1.0",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.13.4",
