--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.0",
     "date-fns": "^2.30.0",
+    "lottie-react-native": "^6.4.1",
     "moment-timezone": "^0.5.43",
     "react": "18.2.0",
     "react-native": "0.72.6",
